fixed artwork/photo header overflow

--- a/assets/styles/artworkHeader.css
+++ b/assets/styles/artworkHeader.css
@@ -4,6 +4,10 @@
   flex-direction: column;
 }
 
+#artwork-header h2 {
+  border-bottom: none !important;
+}
+
 .sticky-artwork-header {
   position: sticky;
   top: 12vh;
@@ -162,12 +166,11 @@
   padding: 5px;
   white-space: initial;
   grid-column-start: 1;
-    /* grid-column-start: 2;
+  /* grid-column-start: 2;
   Re-enable with attribution-qualifier
   */
   grid-column-end: 5;
   text-decoration: underline;
-
 }
 
 #variant-attribution-dropdown .attribution-qualifier {
@@ -225,9 +228,8 @@
   }
 }
 
-
 @media (max-width: 800px) {
   #artwork-header {
-    padding-bottom:20px;
+    padding-bottom: 20px;
   }
 }
