--- a/assets/styles/breadcrumb.css
+++ b/assets/styles/breadcrumb.css
@@ -7,11 +7,18 @@
 }
 
 #breadcrumb .breadlinks {
+  padding-top: 10px;
   display: flex;
   align-items: center;
   flex-wrap: wrap;
   justify-content: space-evenly;
 }
+
+
+#breadcrumb .component-page-toolbar__btn_edit.btn{
+  padding: 0 !important;
+}
+
 #breadcrumb .breadlinks div {
   cursor: pointer;
   margin-right: 1vw;
@@ -19,9 +26,7 @@
   width: fit-content;
   min-height: 20px;
 }
-#breadcrumb .page-breadcrumb {
-  height: auto;
-}
+
 #breadcrumb .rs-body-m-M:hover {
   text-decoration: underline;
 }
