--- a/assets/styles/resource.css
+++ b/assets/styles/resource.css
@@ -1,4 +1,5 @@
 .page__header-draggable-title .page__header-gripper-label {
+  border-bottom: none !important;
   width: 100% !important;
   font-size: x-large !important;
 }
